Fixed misalignment of button text

--- a/resources/sass/form-input.scss
+++ b/resources/sass/form-input.scss
@@ -40,7 +40,7 @@ input {
     text-align: center;
     background: $color--grey;
     max-width: 150px;
-    height: 35px;
+    height: fit-content;
     padding: 10px;
     margin: 10px;
 
